--- a/data/settings.json
+++ b/data/settings.json
@@ -1,7 +1,8 @@
 {
   "host": "127.0.0.1",
   "port": "8888",
-  "framerate": 144,
+  "framerate": 20,
+  "framerate_collision": 250,
   "skin": {
     "stone": "@",
     "wood": "#",
